# log-factory-package-ext-otel

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
simple_log_factory_ext_otel/: __init__.py  _constants.py  _resource.py  db.py  fastapi_instr.py  handler.py  requests_instr.py  traced_logger.py  tracing.py
tests/: conftest.py  test_db.py  test_fastapi_instr.py  test_handler.py  test_integration.py  test_requests_instr.py  test_resource.py  test_traced_logger.py  test_tracing.py
